  - help.pm rewritten. It was too much output. Now the user has several choices:
    -h|--help=<all>                    The complete help for all.
    -h|--help=<dc|datacenter|vcenter>  Help for datacenter/vcenter checks.
    -h|--help=<host>                   Help for vmware host checks.
    -h|--help=<vm>                     Help for virtual machines checks.
    -h|--help=<cluster>                Help for cluster checks.
  - host_service_info() rewritten.
    - No longer a list of services via subselect.
    - Instead full blacklist/whitelist support
    - With --isregexp blacklist/whitelist items are interpreted as regular expressions
  - Changed switch of blacklist from -x to -B
  - Changed switch of whitelist from -y to -W
  - main_select(). Something for the scatterbrained of us. Replaced string compare (eq,ne etc.) with
    a regexp pattern matching. So it is possible to type in services or Services instead of service.

- 29 Nov 2013 M.Fuerstenau version 0.8.13
  - In all functions checking host for maintenance we had the following contruction:

    if (uc($host_view->get_property('runtime.inMaintenanceMode')) eq "TRUE")

    This is quite stupid. runtime.inMaintenanceMode is xsd:boolean wich means true or false (in 
    lower cas letters. So a uc() make no sense. Removed

  - Bypass SSL certificate validation - thanks Robert Karliczek for the hint
  - Added --sslport if any port other port than 443 is wanted. 443 is used as default.
  - Rewritten authorization part. Sessionfiles are working now.
  - Updated README.

- 03 Dec 2013 M.Fuerstenau version 0.8.14
  - host_runtime_info()
    - Fixed minor bug. In case of an unknown with sensors the unknown was always mapped to
      a warning. This wasn't sensefull under all circumstances. Now it is only mapped to warning
      if --ignoreunknow is not set.
  - README
    - Updated installation notes
  - Optional pathname for sessionfile